# pnu-machine-learning-2021

./: CMakeLists.txt  README.md  main.py  requirements.txt  setup.py
.github/workflows/: ubuntu.yml  window.yml  windows.yml  workflow.yml
Builds/CMake/: CompileOptions.cmake
Datasets/: 3d10000.csv  3d10000.txt  3d100a.csv  3d100b.csv  3d100b.txt
Examples/00-regression/: CMakeLists.txt  main.cpp
Includes/Data/: BaseData-Impl.hpp  BaseData.hpp  Matrix-Impl.hpp  Matrix.hpp  SparseData.hpp  StructuredData-Impl.hpp  StructuredData.hpp
Includes/Generator/: BaseGenerator-Impl.hpp  BaseGenerator.hpp  BatchGenerator.hpp  CrossFoldGenerator-Impl.hpp  CrossFoldGenerator.hpp  MiniBatchGenerator.hpp
Includes/Layer/: Activation.hpp  BaseLayer.hpp  Dense.hpp  Initializer.hpp
Includes/Learner/: Activation.hpp  BaseLearner.hpp  Initializer.hpp  LearningRate.hpp  Loss.hpp  Regression.hpp  kNN.hpp
Includes/Math/: Matrix-Impl.hpp  Matrix.hpp
Includes/Utils/: DataLoader.hpp
Sources/: CMakeLists.txt  main.cpp
Sources/Data/: BaseData.cpp  SparseData.cpp  StructuredData.cpp
Sources/Generator/: BaseGenerator.cpp  BatchGenerator.cpp  CrossFoldGenerator.cpp  MiniBatchGenerator.cpp
Sources/Learner/: BaseLearner.cpp  Regression.cpp  kNN.cpp
Sources/Math/: Matrix.cpp
Sources/Utils/: DataLoader.cpp
Tests/UnitTests/: BaseGeneratorTests.cpp  BatchGeneratorTests.cpp  CMakeLists.txt  MatrixTests.cpp  UnitTests.cpp  pch.h
pnuml/data/: __init__.py  loader.py
pnuml/evaluator/: __init__.py  prediction_evaluator.py
pnuml/learner/: __init__.py  base_learner.py  kNN.py  (+1 more)
(+16 files in other folders)
